# Vardanyan_Gor-Kursain_4rd_kurs

./: CMakeLists.txt  README.md  account.h  admindialog.cpp  admindialog.h  atmcontroller.cpp  atmcontroller.h  main.cpp  mainwindow.cpp  mainwindow.h
